--- a/backend/package.json
+++ b/backend/package.json
@@ -55,16 +55,21 @@
     "@loopback/rest": "^10.0.0",
     "@loopback/rest-explorer": "^3.3.2",
     "@loopback/service-proxy": "^3.2.2",
+    "bcryptjs": "^2.4.3",
+    "isemail": "^3.2.0",
+    "lodash": "^4.17.21",
     "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^7.0.0",
-    "source-map-support": "^0.5.19",
-    "@loopback/testlab": "^3.4.2",
-    "@types/node": "^10.17.60",
     "@loopback/eslint-config": "^11.0.0",
+    "@loopback/testlab": "^3.4.2",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^10.17.60",
     "eslint": "^7.29.0",
+    "source-map-support": "^0.5.19",
     "typescript": "~4.3.4"
   }
 }
