--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
     "@loopback/rest-explorer": "^3.3.2",
     "@loopback/service-proxy": "^3.2.2",
     "@solana/web3.js": "^1.24.1",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "isemail": "^3.2.0",
     "lodash": "^4.17.21",
